--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.2.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
+    "lru-cache": "^7.14.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
