--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "http-server-node",
-  "version": "0.0.1",
+  "name": "http-forward-server",
+  "version": "1.0.2",
   "description": "",
   "author": "",
   "private": true,
